--- a/css/style.css
+++ b/css/style.css
@@ -859,7 +859,12 @@ h1, h2, h3, h4, h5, h6 {
     color: #ccc;
     font-style: italic; }
 
-    .icon-github {
-      font-size: 40px;
-    }
+#git-cont {
+  padding-left: 20px;
+  transform: translateX(20px);
+}
+
+.icon-github {
+  font-size: 30px;
+}
 
